--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==6.7
-cloud-init
+cloud-init==19.1
 colorama==0.3.7
 command-not-found==0.3
 configobj==5.0.6
