--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,70 @@
-flask
+absl-py
+asn1crypto
+astor
+astunparse
+cached-property
+cachetools
+certifi
+chardet
+click
+cryptography
+entrypoints
+Flask
+gast
+google-auth
+google-auth-oauthlib
+google-pasta
+grpcio
 gunicorn
+h5py
+httplib2
+idna
+importlib-metadata
+itsdangerous
+Jinja2
 Keras
-tensorflow
+Keras-Applications
+Keras-Preprocessing
+keyring
+keyrings.alt
+Markdown
+MarkupSafe
+mps-youtube
 numpy
+oauthlib
+opt-einsum
+pafy
+pandas
+Pillow
+protobuf
+pyasn1
+pyasn1-modules
+pycrypto
+pycurl
+PyGObject
+PyMySQL
+PySimpleSOAP
+python-apt
+python-dateutil
+python-debian
+python-debianbts
+pytz
+pyxattr
+pyxdg
+PyYAML
+reportbug
+requests
+requests-oauthlib
+rsa
+scipy
+SecretStorage
+six
+tensorboard
+tensorboard-plugin-wit
+tensorflow
+tensorflow-estimator
+termcolor
+urllib3
+Werkzeug
+wrapt
+zipp
