--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,7 @@
-absl-py==0.11.0
-asn1crypto==0.24.0
-astor==0.8.1
-astunparse==1.6.3
-cached-property==1.5.2
-cachetools==4.1.1
-certifi==2018.8.24
-chardet==3.0.4
-click==7.1.2
-cryptography==2.6.1
-entrypoints==0.3
-Flask==1.1.2
-gast==0.3.3
-google-auth==1.23.0
-google-auth-oauthlib==0.4.2
-google-pasta==0.2.0
-grpcio==1.33.2
-gunicorn==20.0.4
-h5py==2.10.0
-httplib2==0.11.3
-idna==2.6
-importlib-metadata==2.0.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-Keras==2.4.3
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-keyring==17.1.1
-keyrings.alt==3.1.1
-Markdown==3.3.3
-MarkupSafe==1.1.1
-mps-youtube==0.2.8
-numpy==1.18.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-pafy==0.5.5
-pandas==1.2.3
-Pillow==8.0.1
-protobuf==3.14.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycrypto==2.6.1
-pycurl==7.43.0.2
-PyGObject==3.30.4
-PyMySQL==1.0.2
-PySimpleSOAP==1.16.2
-pytz==2021.1
-pyxattr==0.6.1
-pyxdg==0.25
-PyYAML==5.3.1
-reportbug===7.5.3-deb10u1
-requests==2.21.0
-requests-oauthlib==1.3.0
-rsa==4.6
-scipy==1.5.4
-SecretStorage==2.3.1
-six==1.12.0
-tensorboard==2.4.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
-termcolor==1.1.0
-urllib3==1.24.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.4.0
+flask
+gunicorn
+Jinja2
+Keras
+pandas
+tensorflow
+numpy
